--- a/zwp2/wp-content/themes/twentytwentyfive/parts/header.html
+++ b/zwp2/wp-content/themes/twentytwentyfive/parts/header.html
@@ -1,1 +1,11 @@
 <!-- wp:pattern {"slug":"twentytwentyfive/header"} /-->
+
+<!-- Event snippet for Page view conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17103347823/yqXOCP2eyssaEO_Awds_',
+      'value': 1.0,
+      'currency': 'EUR'
+  });
+</script>
+
